--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Raja Palleti</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  Hi this is Raja, Website is still in progress.
+    <div>
+        I'm Raja Palleti, UI Developer with good hands-on experience in UI development for Web Application. I'm currently working with a Service cum Product Organization.
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
