--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div>
-        I'm Raja Palleti, UI Developer with good hands-on experience in UI development for Web Application. I'm currently working with a Service cum Product Organization.
-
-    </div>
-    <script src="script.js"></script>
+    <section class="section-1">
+        <div class="text-center sec-content-1">
+            <div class=""><img src="images/logo.png" alt=""></div>
+            <p>
+                Hey, I'm Raja Palleti, UI Developer with good hands-on experience in UI development for Web Application. I'm currently working with a Service cum Product Organization.
+            </p>
+    
+        </div>
+    </section>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
